--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 VITE_UPLOAD_LINK = https://api.cloudinary.com/v1_1/dwkql1kap/image/upload
-VITE_BASE_URL=http://localhost:3002/api
+VITE_BASE_URL=https://project-test-xys2.onrender.com/api
 
